--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,12 +14,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.7",
+    "@types/yup": "^0.29.11",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "formik-material-ui": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.1",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
